@@ -30,6 +30,10 @@
 #include <glib.h>
 #include <errno.h>
 
+#ifdef G_OS_WIN32
+#include <direct.h> 
+#endif
+
 #ifdef HAVE_UNISTD_H
 #include <unistd.h>
 #endif
